--- a/BlazorServerApp/_Imports.razor
+++ b/BlazorServerApp/_Imports.razor
@@ -10,3 +10,6 @@
 @using BlazorServerApp.Shared
 
 @using BlazorServerApp.OpenAPIs
+@using BlazorServerApp.Data
+@using System.Text.Json
+@using Microsoft.AspNetCore.Mvc
